[package]
name = "bitcoin-script-stack"
version = "0.0.1"
description = "Bitcoin script stack tracking tool and debugger"
edition = "2021"
authors = ["Martin Jonas <martinjonas@gmail.com>"]
repository = "https://github.com/FairgateLabs/rust-bitcoin-script-stack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script" }
bitcoin-scriptexec = { git = "https://github.com/BitVM/rust-bitcoin-scriptexec/"}
bitcoin = "0.32.5"
crossterm = { version = "0.27.0", optional = true }
hex = "0.4.3"

[features]
interactive = ["crossterm"]
