[package]
name = "bitcoin-script-stack"
version = "0.0.1"
description = "Bitcoin script stack tracking tool and debugger"
edition = "2021"
authors = ["Martin Jonas <martinjonas@gmail.com>"]
repository = "https://github.com/FairgateLabs/rust-bitcoin-script-stack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin-script = { git = "https://github.com/alpenlabs/rust-bitcoin-script", branch = "bitcoin-0.32.5" }         # TODO: remove the fork and branch once merged
bitcoin = "0.32.5"
bitcoin-scriptexec = { git = "https://github.com/alpenlabs/rust-bitcoin-scriptexec", branch = "bitcoin-0.32.5" } # TODO: remove the fork and branch once merged
crossterm = { version = "0.27.0", optional = true }
hex = "0.4.3"

[features]
interactive = ["crossterm"]
