[package]
name = "bitcoin-script-stack"
description = "Bitcoin script stack tracking tool and debugger"
version = "0.0.1"
edition = "2021"
authors = ["Martin Jonas <martinjonas@gmail.com>"]
repository = "https://github.com/FairgateLabs/rust-bitcoin-script-stack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin-script = { git = "https://github.com/alpenlabs/rust-bitcoin-script", rev = "0b2407336832e8286bce5c6bf1ae5563cb4fa3b0" }
bitcoin = "0.32.5"
bitcoin-scriptexec = { git = "https://github.com/BitVM/rust-bitcoin-scriptexec" }
crossterm = { version = "0.27.0", optional = true }
hex = "0.4.3"

[features]
interactive = ["crossterm"]
